--- a/src/main/resources/css/LightTheme/InputKeyboard/button.css
+++ b/src/main/resources/css/LightTheme/InputKeyboard/button.css
@@ -72,7 +72,26 @@
 
 .keyboard-button{
   -fx-background-image: url('keyboard.png');
-  -fx-background-size: 48px;
+  -fx-background-size: 24px;
+  -fx-background-position: center;
+  -fx-background-repeat: no-repeat;
+}
+
+.left-button{
+  -fx-background-image: url('left.png');
+  -fx-background-size: 24px;
+  -fx-background-position: center;
+  -fx-background-repeat: no-repeat;
+}
+.right-button{
+  -fx-background-image: url('right.png');
+  -fx-background-size: 24px;
+  -fx-background-position: center;
+  -fx-background-repeat: no-repeat;
+}
+.delete-button{
+  -fx-background-image: url('backspace.png');
+  -fx-background-size: 24px;
   -fx-background-position: center;
   -fx-background-repeat: no-repeat;
 }
