--- a/src/main/resources/fxml/FilePanel/FilePanelUI.fxml
+++ b/src/main/resources/fxml/FilePanel/FilePanelUI.fxml
@@ -12,51 +12,43 @@
    <children>
       <VBox layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="250.0" spacing="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button fx:id="newButton" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="New">
+            <Button fx:id="newButton" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="New" styleClass="new-button">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <graphic>
                   <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/new.png" />
-                     </image>
+
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="openButton" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Open">
+            <Button fx:id="openButton" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Open" styleClass="open-button">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <graphic>
                   <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/open.png" />
-                     </image>
+
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="saveButton" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Save">
+            <Button fx:id="saveButton" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Save" styleClass="save-button">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <graphic>
                   <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/save.png" />
-                     </image>
+
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="saveAsButton" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Save as">
+            <Button fx:id="saveAsButton" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Save as" styleClass="save-as-button">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <graphic>
                   <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/save%20as.png" />
-                     </image>
+
                   </ImageView>
                </graphic>
             </Button>
