--- a/src/main/resources/fxml/InputKeyboard/InputKeyboardUI.fxml
+++ b/src/main/resources/fxml/InputKeyboard/InputKeyboardUI.fxml
@@ -82,7 +82,7 @@
 						</HBox>
 						<HBox alignment="CENTER" spacing="5.0">
 							<children>
-								<Button mnemonicParsing="false" onMousePressed="#insertAbsButtonPressing" text="abs">
+								<Button mnemonicParsing="false" onMousePressed="#insertSpecialButtonPressing" text="abs">
 									<styleClass>
 										<String fx:value="normal-button" />
 										<String fx:value="number-button" />
