prepare for enter + delete

--- a/src/main/resources/css/DarkTheme/InputKeyboard/button.css
+++ b/src/main/resources/css/DarkTheme/InputKeyboard/button.css
@@ -19,7 +19,7 @@
 .important-button {
     -fx-background-color: #1E88E5;
     -fx-font-weight: bold;
-    -fx-text-fill: lightgray;
+    -fx-text-fill: white;
 }
 
 .important-button:hover {
