--- a/src/main/resources/fxml/InputKeyboard/InputKeyboardUI.fxml
+++ b/src/main/resources/fxml/InputKeyboard/InputKeyboardUI.fxml
@@ -4,7 +4,6 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -463,7 +462,7 @@
 				</HBox>
 				<HBox alignment="CENTER" spacing="3.0">
 					<children>
-						<Button mnemonicParsing="false" onMousePressed="#switchNormalLetterToCappedLetterKeyBoard" text="Up">
+						<Button mnemonicParsing="false" onMousePressed="#switchNormalLetterToCappedLetterKeyBoard" prefWidth="100.0" text="Up">
 							<HBox.margin>
 								<Insets right="55.0" />
 							</HBox.margin>
@@ -517,7 +516,7 @@
 								<String fx:value="letter-button" />
 							</styleClass>
 						</Button>
-						<Button mnemonicParsing="false" onMousePressed="#deleteButtonPressing" >
+						<Button mnemonicParsing="false" onMousePressed="#deleteButtonPressing" prefWidth="100.0">
 							<HBox.margin>
 								<Insets left="55.0" />
 							</HBox.margin>
@@ -743,7 +742,7 @@
 				</HBox>
 				<HBox alignment="CENTER" spacing="3.0">
 					<children>
-						<Button mnemonicParsing="false" onMousePressed="#switchCappedLetterToNormalLetterKeyBoard" text="Down">
+						<Button mnemonicParsing="false" onMousePressed="#switchCappedLetterToNormalLetterKeyBoard" prefWidth="100.0" text="Down">
 							<HBox.margin>
 								<Insets right="55.0" />
 							</HBox.margin>
@@ -797,7 +796,7 @@
 								<String fx:value="letter-button" />
 							</styleClass>
 						</Button>
-						<Button mnemonicParsing="false" onMousePressed="#deleteButtonPressing" >
+						<Button mnemonicParsing="false" onMousePressed="#deleteButtonPressing" prefWidth="100.0">
 							<HBox.margin>
 								<Insets left="55.0" />
 							</HBox.margin>
