--- a/src/main/resources/fxml/GraphList/GraphListUI.fxml
+++ b/src/main/resources/fxml/GraphList/GraphListUI.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -18,25 +19,29 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
     </rowConstraints>
     <children>
-        <VBox prefHeight="200.0" prefWidth="100.0">
-            <children>
-                <VBox fx:id="graphListBox" spacing="7.0" />
-            <Button fx:id="addNewBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#requestAddingGraphData" styleClass="add-button">
-               <graphic>
-                  <ImageView fitHeight="24.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" />
-               </graphic>
-               <VBox.margin>
-                  <Insets top="7.0" />
-               </VBox.margin>
+      <ScrollPane fitToWidth="true" hbarPolicy="NEVER" stylesheets="@../../css/LightTheme/GraphList/scroll-pane.css" vbarPolicy="NEVER">
+         <content>
+              <VBox>
+                  <children>
+                      <VBox fx:id="graphListBox" spacing="7.0" />
+                  <Button fx:id="addNewBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#requestAddingGraphData" styleClass="add-button">
+                     <graphic>
+                        <ImageView fitHeight="24.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <VBox.margin>
+                        <Insets top="7.0" />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="10.0" top="10.0" />
+                     </padding>
+                  </Button>
+                  </children>
                <padding>
-                  <Insets bottom="10.0" top="10.0" />
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
-            </Button>
-            </children>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
-        </VBox>
+              </VBox>
+         </content>
+      </ScrollPane>
       <Button fx:id="openButton" maxHeight="1000.0" maxWidth="20.0" minWidth="20.0" mnemonicParsing="false" styleClass="detail-button" GridPane.columnIndex="1">
          <graphic>
             <Pane maxHeight="200.0" maxWidth="5.0" minHeight="200.0" minWidth="5.0" prefHeight="40.0" prefWidth="5.0" styleClass="detail-surface" />
