--- a/src/main/resources/fxml/OpenRecent/RecentBlockUI.fxml
+++ b/src/main/resources/fxml/OpenRecent/RecentBlockUI.fxml
@@ -31,7 +31,7 @@
                               <Text fx:id="lastOpenedTimeLabel" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="dir" text="Time" />
                               <AnchorPane>
                                  <children>
-                                    <Button fx:id="pinBtn" mnemonicParsing="false" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <Button fx:id="pinBtn" mnemonicParsing="false" styleClass="pin-btn" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <graphic>
                                           <ImageView fx:id="pinImg" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
